[gd_scene load_steps=5 format=3 uid="uid://qlbjd1hi37g0"]

[ext_resource type="Script" path="res://Scenes/Web_Window/Webs/ravenmail_web.gd" id="1_nyxuh"]
[ext_resource type="PackedScene" uid="uid://bqtgr0yw0e6yh" path="res://Scenes/Web_Window/Webs/ravenmail_email_button.tscn" id="2_hwebp"]
[ext_resource type="Script" path="res://Scenes/Web_Window/Ravenmail_Controller.gd" id="2_p8nkq"]
[ext_resource type="Script" path="res://Scenes/Web_Window/EmailSpawner.gd" id="5_yfui4"]

[node name="Ravenmail_Web" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nyxuh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tabs" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Tabs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_p8nkq")

[node name="estimadoArkhar" parent="HBoxContainer/Tabs/VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
layout_mode = 2
email_subject = "Estimado Arkhar"
article = 1
email = "Estimado Arkhar, 
Ha llegado a mis oídos la terrible noticia de que injustamente te han echado de la Universidad de Hechicería. ¡Por la barba de Merlín, qué infortunio! 
Pero calma, no has de entrar en angustia y desesperación, porque te traigo buenos augurios. En las Tierras Lejanas de Valhan-Gün descubrieron una nueva magia, la llaman Bubble Coin, una fuerza extraña e intangible que te permite ganar más, más y [b]MÁS![/b]
Tus problemas están resueltos con esta magia, hazme caso, no dudes en aprenderla.
Sinceramente, tu amigo, Berker"

[node name="bienvenido" parent="HBoxContainer/Tabs/VBoxContainer" instance=ExtResource("2_hwebp")]
visible = false
layout_mode = 2
email_subject = "bienvenido"
email = "Estimado Arkhar, 
Ha llegado a mis oídos la terrible noticia de que injustamente te han Estimado Arkhar, 
He recibido tu carta, y me llena de regocijo saber que te has sumergido en este maravilloso mundo mágico de las Bubble Coins. No olvides que puedes gastar Bubble Coins en conseguir Potenciadores Bubbles de Magia. Espero noticias de tus avances.
Sinceramente, tu amigo, Berkerechado de la Universidad de Hechicería. ¡Por la barba de Merlín, qué infortunio! 
Pero calma, no has de entrar en angustia y desesperación, porque te traigo buenos augurios. En las Tierras Lejanas de Valhan-Gün descubrieron una nueva magia, la llaman Bubble Coin, una fuerza extraña e intangible que te permite ganar más, más y [b]MÁS![/b]
Tus problemas están resueltos con esta magia, hazme caso, no dudes en aprenderla.
Sinceramente, tu amigo, Berker"

[node name="EmailContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40
script = ExtResource("5_yfui4")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/EmailContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/EmailContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
bbcode_enabled = true
text = "Estimado Arkhar, 
He recibido tu carta, y me llena de regocijo saber que te has sumergido en este maravilloso mundo mágico de las Bubble Coins. No olvides que puedes gastar Bubble Coins en conseguir Potenciadores Bubbles de Magia. Espero noticias de tus avances.
Sinceramente, tu amigo, Berker"

[node name="Button" type="Button" parent="HBoxContainer/EmailContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "¡Click aquí!"

[connection signal="OpenTab" from="HBoxContainer/Tabs/VBoxContainer" to="HBoxContainer/EmailContainer" method="SetEmail"]
[connection signal="ArticleSet" from="HBoxContainer/EmailContainer" to="." method="set_article"]
